controll.js fertig gemacht mit allen features für single server

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"clientId":"847351568843014185","guildId":"502935781749293067","token":"ODQ3MzUxNTY4ODQzMDE0MTg1.YK8zpQ.XeO-yH8luna6s17aYh4gNoMpyec","sql_ip":"localhost","path":"D:\\GitHub\\holypenguin_dc_bot/12_9__17_45_4.log","host":"192.168.159.128"}
+{"clientId":"847351568843014185","guildId":"502935781749293067","token":"ODQ3MzUxNTY4ODQzMDE0MTg1.YK8zpQ.XeO-yH8luna6s17aYh4gNoMpyec","sql_ip":"192.168.178.42","path":"/home/benno/github/holypenguin_dc_bot/16_9__21_57_59.log","host":"192.168.178.58"}
